--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,14 @@
 	bottom: 0;
 	width: 100%;
 }
+
+.result-example .spe {
+	width: 60px;
+	height: 60px;
+  }
+  .sub-title {
+	color: #888;
+	font-size: 14px;
+	padding: 30px 0 18px 0;
+	margin-left: 15px;
+  }
